Changes from papeeria

--- a/UFO.tex
+++ b/UFO.tex
@@ -318,7 +318,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{A Template for a Scientific Paper}
+\title{Analysis of Ufo Sightings}
 %
 %
 % author names and IEEE memberships
@@ -330,9 +330,14 @@
 % was not built to handle multiple paragraphs
 %
 
-\author{ \parbox{3 in}{\centering Markus Goldstein\\
+\author{ \parbox{3 in}{\centering Anna Bussas bussas@mail.hs-ulm.de\\
+Syndey Nkemakolam nkemakolam@mail.hs-ulm.de\\
+Kasparas Gudzius gudzius@mail.hs-ulm.de\\
+Zhiwen Lian lian@mail.hs-ulm.de\\
+Tim Hutttlestone huttlestone@mail.hs-ulm.de\\
 				 University of Applied Sciences Ulm\\
-         {\tt\small {goldstein}@hs-ulm.de}}
+ %        {\tt\small {goldstein}@hs-ulm.de}}
+ }
 }
 
 
@@ -358,7 +363,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-A short introduction to Latex is given by this example paper. Typically, your abstract should consist of a summary and your key findings.
+Based on the data resourse from XXX and the data processing by CRISP-DM, a fact shows us that XXXXXXXXX
 \end{abstract}
 
 % For peerreview papers, this IEEEtran command inserts a page break and
@@ -370,7 +375,11 @@ A short introduction to Latex is given by this example paper. Typically, your ab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 \label{sec:intro}
-Here you give an introduction to your Lab Project. Describe what you want to achieve. 
+We want to analyse the database ufo sightings from
+the website kaggle.com. For this we want to figure out
+e.g. If there are popular ufo shapes per country or if
+the number of ufo sightings depends on daytime or
+nighttime.(XXXXXXXXX To see whether we want to have more )
 
 \subsection{Scenario} \label{subsec:scenario}
 Here you can describe your project in more detail, basically referring to the 
