Change the paper structure

--- a/UFO.tex
+++ b/UFO.tex
@@ -382,12 +382,11 @@ the number of ufo sightings depends on daytime or
 nighttime.(XXXXXXXXX To see whether we want to have more )
 
 \subsection{Scenario} \label{subsec:scenario}
-Here you can describe your project in more detail, basically referring to the 
-\emph{Business Understanding} phase of the CRISP-DM process \cite{wikicrispdm}.
+The data source has totally 11 columns which covers the discovering time, location, shapes, duration and so on. As our goal is to find out the popular shapes per country and the number of ufo sightings depending on daytime or nighttime, we need to creates a data warehouse contains at least the information of shapes, country, time category.
 
 \subsection{Structure of the Paper} \label{subsec:struct}
 The paper is structured as follows: in Section~\ref{sec:dataunderstanding} we present the availability of Open Data we use in this project.
-Then, in Section~\ref{sec:concept} we describe our ... Finally, we conclude our work in Section~\ref{sec:concl} with ...
+Then, in Section~\ref{sec:concept} we describe what is our concern to model the original data to our expected data. Finally, we conclude our work in Section~\ref{sec:concl} with (XXXXXXXXXX placeholder --> to see if any section we want to add).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -434,11 +433,16 @@ This means, we can solve the problem in steps as follows:
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{More Sections} \label{sec:further}
-It is also possible that you use paragraphs to structure your work.
-%
-\paragraph{Issue 1} The first question would be how to solve a slightly modified scenario.
-\paragraph{Issue 2} Another possible area of research concerns the available data. What if ...?
+\section{Modeling} \label{sec:modeling}
+Data-Mining: Apply Algorithm 
+Analytics: Create a report with (aggregated) data, for example using Pivot tables 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Evaluation} \label{sec:Evaluation}
+Did we reach the goals??? Talk about how we know we reach our goal
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Deployment} \label{sec:Deployment}
+To talke about how we make result available and what is the result
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion} \label{sec:concl}
 We have shown in this paper that ...
